--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcryptjs": "^3.0.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
+    "csrf": "^3.1.0",
     "debug": "~2.6.9",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
